--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                         <a href="#contact-me">Contact Me</a>
                     </li>
                     <li>
-                        <a href="./assets/documents/joelawtonresume.pdf" target="_blank">My Resume</a>
+                        <a href="" target="_blank">My Resume</a>
                     </li>
                 </ul>
             </nav>
@@ -87,7 +87,7 @@
                     </a>
                     <a href="" target="_blank" class="coming soon">
                         <div class="project-label">
-                            <h3>Fallout 4 Character Manager</h3>
+                            <h3></h3>
                             <p></p>
                         </div>
                     </a>
