--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             <div class="quote">
                 <blockquote>
                     <p id="quote-text">
-                        Imspire to create websites <br> that have useabilty to all that use them. 
+                        Imspire to create websites <br> that have useabilty to all that use them.. 
                     </p>
                     <p>
                         --Tomas Rullan<br>
